<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".signup">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/loginlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/username"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signupuser"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signupuser"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/design_default_color_surface"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="50"
        android:hint="@string/abcd_gmail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#FF9E80"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/signuppass"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signuppass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/abcde"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#FF9E80"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupuser" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="250sp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_button"
        android:text="@string/Register"
        android:textAllCaps="true"
        android:textColor="#F8F9FA"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuppass" />

    <Button
        android:id="@+id/backtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_button"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="602dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>